<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D14417"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_form"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:hint="@string/name_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <Spinner
                android:id="@+id/spinner_rol"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.921"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagerol" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/constellation_textinputedit"
                android:layout_width="142dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/constellation_form"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <Spinner
                android:id="@+id/spinner_tier"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.921"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagetier" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/atk_textInputEditText"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/atk_form"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <ImageView
                android:id="@+id/image_galery"
                android:layout_width="128dp"
                android:layout_height="105dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/ic_menu_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_arm"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_weapons" />

            <RatingBar
                android:id="@+id/rtform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:theme="@style/RatingBar.Yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_textInputEdit" />

            <Spinner
                android:id="@+id/spinner_element"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="4dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_elements" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hp_textinputEditText"
                android:layout_width="142dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/hp_form"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/def_textInputEditText"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/def_form"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView13" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="844dp"
                android:text="@string/save_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="844dp"
                android:layout_marginEnd="12dp"
                android:text="@string/cancel_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_elements"
                android:layout_width="49dp"
                android:layout_height="61dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/tipo"
                android:rotationY="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_arm" />

            <ImageView
                android:id="@+id/image_weapons"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hp_textinputEditText"
                app:srcCompat="@drawable/arma_1" />

            <ImageView
                android:id="@+id/imagetier"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/def_textInputEditText"
                app:srcCompat="@drawable/tier" />

            <ImageView
                android:id="@+id/imagerol"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_tier"
                app:srcCompat="@drawable/rol2" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_galery"
                app:srcCompat="@drawable/name2" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="188dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/constelaci_n" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="188dp"
                android:layout_marginEnd="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ataque" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constellation_textinputedit"
                app:srcCompat="@drawable/vida" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/atk_textInputEditText"
                app:srcCompat="@drawable/defensa" />

            <Switch
                android:id="@+id/switch_equip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/switch_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rtform" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_textInputEdit"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/date_form"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagedate" />

            <ImageView
                android:id="@+id/imagedate"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="420dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_form"
                app:srcCompat="@drawable/date" />

            <ImageView
                android:id="@+id/image_remuve"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toEndOf="@+id/image_galery"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/imagen_delete" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="117dp"
                android:layout_height="61dp"
                android:layout_marginTop="32dp"
                android:text="@string/butt_clear_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>